--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Connect_Four"
         tools:targetApi="31">
+
+        <!-- Pantalla principal -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -19,10 +21,14 @@
             android:theme="@style/Theme.Connect_Four">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity
+            android:name=".GameActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
