--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Connect_Four"
         tools:targetApi="31">
-
+        <activity
+            android:name=".InGame"
+            android:exported="false"
+            android:label="@string/title_activity_in_game"
+            android:theme="@style/Theme.Connect_Four" />
         <!-- Pantalla principal -->
         <activity
             android:name=".MainActivity"
@@ -21,26 +25,19 @@
             android:theme="@style/Theme.Connect_Four">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Pantalla de juego -->
+        </activity> <!-- Pantalla de juego -->
         <activity
             android:name=".GameActivity"
-            android:exported="false" />
-
-        <!-- Pantalla de victoria -->
+            android:exported="false" /> <!-- Pantalla de victoria -->
         <activity
             android:name=".VictoryActivity"
-            android:exported="false" />
-
-        <!-- Pantalla de derrota -->
+            android:exported="false" /> <!-- Pantalla de derrota -->
         <activity
             android:name=".DefeatActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
-
