--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Connect_Four"
         tools:targetApi="31">
         <activity
-            android:name=".InGame"
+            android:name=".InGameActivity"
             android:exported="false"
             android:label="@string/title_activity_in_game"
             android:theme="@style/Theme.Connect_Four" />
