Implementa pantalla de empate y actualiza lógica del juego

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".DefeatActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".TieActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
